Modify output folder for generation